--- a/package.json
+++ b/package.json
@@ -42,26 +42,33 @@
   },
   "homepage": "https://github.com/lywzx/pdd-node-sdk#readme",
   "devDependencies": {
-    "@lywzx/rollup-build-scripts": "0.0.7",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@lywzx/rollup-build-scripts": "0.0.7",
+    "@nestjs/common": "^7.4.2",
+    "@nestjs/core": "^7.4.2",
+    "@nestjs/testing": "^7.4.2",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/debug": "^4.1.5",
+    "@types/lodash": "^4.14.159",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.11.2",
+    "@types/redis": "^2.8.25",
     "@types/sinon": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "brotli": "^1.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "@types/chai-as-promised": "^7.1.3",
     "chalk": "^4.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
@@ -70,30 +77,24 @@
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.20",
-    "@types/lodash": "^4.14.159",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0",
     "prettier": "^2.1.2",
+    "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.12",
     "rimraf": "^3.0.2",
     "rollup": "^2.23.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-dts": "~3.0.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.27.3",
     "sinon": "^9.0.3",
     "source-map-support": "^0.5.19",
     "tiny-pinyin": "^1.3.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3",
-    "zlib": "^1.0.5",
-    "@nestjs/common": "^7.4.2",
-    "@nestjs/core": "^7.4.2",
-    "@nestjs/testing": "^7.4.2",
-    "reflect-metadata": "^0.1.12",
-    "@types/debug": "^4.1.5",
-    "@types/redis": "^2.8.25",
-    "redis": "^3.0.2",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-dts": "~3.0.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.27.3"
+    "zlib": "^1.0.5"
   },
   "husky": {
     "hooks": {
